fixed alignment on week table.  Fixed problem wherein a key would not be assigned if week was empty.  Added get and post data functionality to /funds and fixed css. Removed ability to submit if extra or normal spending are void.  added delete week functionality

--- a/app/globals.css
+++ b/app/globals.css
@@ -25,8 +25,19 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-vh-100 {
-  min-height: 100vh;
+.vh-100 {
+  height: 100vh;
+  display: flex;
+  width: 100%;
+  justify-content: center; /* Centers horizontally */
+  align-items: center; /* Centers vertically */
+  flex-direction: column; /* Stack elements vertically */
+}
+
+.form-wrapper {
+  width: 100%; /* Make the wrapper take full width */
+  max-width: 600px; /* Optional: Set a max width if you want */
+  padding: 0 20px; /* Optional: Add padding for spacing */
 }
 
 * {
